# c-text-adventure

./: .gitignore  CMakeLists.txt  inventory.c  inventory.h  location.c  main.c  misc.c  move.c  noun.c  object.c  object.h  parsexec.c  parsexec.h
include/: location.h  misc.h  move.h  noun.h  object.h
src/: CMakeLists.txt  inventory.c  location.c  main.c  misc.c  move.c  noun.c  object.c  parsexec.c
